<resources>
    <string name="app_name">Nutechwallet</string>
    <string name="home">Home</string>
    <string name="transfer">Transfer</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="transaction">Transaction</string>
    <string name="transaction_history_desc">Now you can see your transaction history Click for more</string>
    <string name="my_qr_code">Click more if you want to see your QR code You can use it for make an easy transfer with your partner</string>
    <string name="current_balance">Current balance</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="top_up_your_balance_here">Top Up your balance here</string>
    <string name="amount">Amount</string>
    <string name="transfer_balance">Transfer Balance</string>
    <string name="transfer_your_balance_to_a_friend_here">Transfer your balance to a friend here</string>
    <string name="fill_out_the_amount">Fill out the amount</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign">Sign</string>
    <string name="wallet">Wallet</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="version">Version 1.0.0</string>
</resources>